--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+rusqlite = { version = "0.36.0", features = ["bundled"] }
 chrono = "0.4.41"
 crossterm = "0.29.0"
 ratatui = "0.29.0"
