--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ rusqlite = { version = "0.36.0", features = ["bundled"] }
 chrono = "0.4.41"
 crossterm = "0.29.0"
 ratatui = "0.29.0"
+dirs = "6.0"
 
 [dev-dependencies]
 tempfile = "3.20.0"
